--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MisterCrazie<tile>
+        <title>MisterCrazie<title>
     </head>
     
     <body>
