--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             Je jouais au basketball (4ans) mais aprés j'ai commencé le football.Je suis tout le temps sur internet (Youtube,
             Wikipedia,forum....)ou sur des logiciel (sony vegas pro, photoshop,)
         </p>
+        <p>
+            <a href="page2.html">Visite ma page 2</a>
+        </p>
     </body>
 </html>
     
