--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
         <title>Ma page deux</title>
     </head>
     <body>
-        <h1>Bienvenue sur la page 2</html>
+        <h1>Bienvenue sur la page 2</h1>
         <p>J'apprend a faire des liens</p>
     </body>
 </html>
